--- a/assets_css/profile.css
+++ b/assets_css/profile.css
@@ -69,7 +69,7 @@ body, html {
 .profile-container {
     max-width: 450px;
     margin: 0 auto;
-    background: #fff;
+    background: url('../img/bg.png') center/cover no-repeat; 
     border-radius: 0px;
     box-shadow: 0 4px 24px rgba(155,92,255,0.13);
     padding: 20px 12px 80px 12px; /* spațiu mare jos */
