--- a/assets_css/messages.css
+++ b/assets_css/messages.css
@@ -284,13 +284,13 @@ body, html {
     margin-right: 0;
     box-shadow: 0 2px 15px #8d72ff22;
 }
-.msg-time {␊
+.msg-time {
     font-size: 0.85em;
     color: #af87e7;
     margin-left: 10px;
     margin-right: -7px;
     vertical-align: bottom;
-}␊
+}
 /* 2. Input + buton trimitere mesaje, mai compact și cu spațiu */
 .messages-conv-footer {
     padding: 13px 11px 15px 11px;   /* mai compact pe lateral și jos */
