--- a/assets_css/index.css
+++ b/assets_css/index.css
@@ -1,5 +1,6 @@
 body {
-    margin: 0;
+    margin: 0 auto;
+    width: 620px;
     height: 100vh;
     background: url('../img/weolcome.png') no-repeat center center fixed;
     background-size: cover;
@@ -17,6 +18,22 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     transform: translateY(-200%);
     opacity: 0;
+}
+
+#start-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+#start-button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
 }
 
 #welcome-frame.drop {
@@ -37,5 +54,6 @@ body {
     }
     100% {
         transform: translateY(0);
+        opacity: 1;
     }
 }
