--- a/assets_css/gallery.css
+++ b/assets_css/gallery.css
@@ -1,5 +1,13 @@
 @import url('profile.css');
 
+.slide {
+    display: none;
+}
+
+.slide.active {
+    display: block;
+}
+
 .gallery-btns {
     display: flex;
     gap: 10px;
