--- a/assets_css/template.css
+++ b/assets_css/template.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     font-family: 'Poppins', Arial, sans-serif;
-    background: #e8f5e9;
+    background: #848484;
     overflow: hidden;
 }
 
