--- a/assets_css/mini-profile.css
+++ b/assets_css/mini-profile.css
@@ -1,3 +1,4 @@
+/* assets_css/mini-profile.css */
 .mini-profile {
     display: flex;
     align-items: center;
@@ -5,7 +6,7 @@
     padding: 14px 18px;
     margin: 0 auto 22px auto;
     box-shadow: 0 2px 8px #0001;
-    width: 375px;
+    width: 580px;
     max-width: 98vw;
 }
 .mini-profile-avatar, .profile-avatar {
