--- a/assets_css/template.css
+++ b/assets_css/template.css
@@ -47,8 +47,8 @@ html, body {
 }
 
 .profile-box {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background: #ffffff;
     border-radius: 8px;
     overflow: hidden;
@@ -75,6 +75,9 @@ html, body {
 
 .content::-webkit-scrollbar {
     display: none; /* hide scrollbar for Chrome, Safari, and Opera */
+}
+.content.no-scroll {
+    overflow: hidden;
 }
 .nav-btn {
     color: #fff;
