--- a/assets_css/welcome.css
+++ b/assets_css/welcome.css
@@ -2,3 +2,4 @@
 @import url('farm-slots.css');
 @import url('../changeslots/slot-panel.css');
 @import url('../quickshop/quickshop.css');
+@import url('../slotstype/slotstype.css');
