--- a/changeslots/slot-panel.css
+++ b/changeslots/slot-panel.css
@@ -26,10 +26,7 @@
     padding-top: 20px;
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
 
-    background-image: url("../img/bg2.png");
-    background-size: cover;      /* acoperă complet panoul */
-    background-position: center; /* centrează imaginea */
-    background-repeat: no-repeat;/* nu repeta imaginea */
+    background: url("../img/bg2.png") center/cover no-repeat;
 }
 #cs-slot-image {
     max-width: 60%;
